syntax = "proto3";

option java_package = "com.server.models";
option java_multiple_files = true;
message AzfRepoZipRequest{
  string id = 1;
  bytes content = 2;
}
message CommandRequest{
  string command = 1;
}
message  Output{
  string output = 1;
}
service  AzfService{
  rpc build(stream AzfRepoZipRequest) returns (stream Output);
  rpc execute(CommandRequest) returns (stream Output);
}
